2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninst int] Use $(DESTDIR) more.

	* Makefile.am (uninstall-hook): Use $(DESTDIR) more.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst] Zonk useless $(pkglibdir) if ‘USE_CMOD’.

	Probably better would be to teach Automake to DTRT.

	* Makefile.am (install-data-hook) [USE_CMOD]:
	Delete useless ‘$(DESTDIR)$(pkglibdir)’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] For consistency, use ‘unsigned long int’ for sepo tag.

	* libpq.c (sepo_type_tag): Change type to ‘unsigned long int’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Paper signed/unsigned wart for ‘PQmblen’ first arg.

	* libpq.c (pg_mblen): Cast first arg of ‘PQmblen’ to ‘void *’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘ERROR’ more.

	* libpq.c (pg_trace): Use ‘ERROR’.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Convert auto var ‘FUNC_NAME’ to #define.

	This avoids "unused variable" warnings in newer Guile versions.

	* libpq.c (lob_flush, lob_end_input, lob_seek, lob_fill_input)
	(lob_write): #define FUNC_NAME internally; #undef too.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Prefer libpq headers in $(includedir)/postgresql, if available.

	* libpq.c: If <postgresql/libpq-fe.h> is
	available, #include that instead of <libpq-fe.h>;
	likewise <postgresql/libpq/libpq-fs.h> over <libpq/libpq-fs.h>.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't use assignment expression as ‘SCM_OPFPORTP’ arg.

	* libpq.c (pg_print): Assign to local var
	‘curout’ first; then use it as ‘SCM_OPFPORTP’ arg.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] If necessary, #define SCM_{ROCHARS,ROLENGTH,ROUCHARS}.

	* gi.h [!SCM_ROCHARS] (SCM_ROCHARS): New #define.
	[!SCM_ROLENGTH] (SCM_ROLENGTH): Likewise.
	[!SCM_ROUCHARS] (SCM_ROUCHARS): Likewise.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
